add function tracking order

--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -2870,6 +2870,10 @@
         home.onclick = function () {
             window.location.href = 'wheyshop.html'
         }
+        const account = document.querySelector('.account-button')
+        account.onclick = function () {
+            window.location.href = 'wheyshop_tracking.html'
+        }
 
         const cartButton = document.querySelector('.cart-button button');
         const cartShow = document.querySelector('.cart-show');
