--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -289,6 +289,249 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="content">
+                                <div class="title">
+                                    <button class="open">
+                                        <i class="fa-solid fa-bars"></i>
+                                    </button>
+                                    Đơn hàng huỷ
+                                </div>
+                                <div class="list-order">
+                                    <div class="list-order-wrapper">
+                                        <div class="order">
+                                            <div class="order-wrapper">
+                                                <div class="header-order">
+                                                    <div class="brand-offical">
+                                                        <div class="brand-offical-logo">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <span>
+                                                                OFFICAL
+                                                            </span>
+                                                        </div>
+                                                        <div class="brand-name">
+                                                            WHEZ
+                                                        </div>
+                                                    </div>
+                                                    <div class="status-order">
+                                                        Hoàn thành
+                                                    </div>
+                                                </div>
+                                                <div class="first-product">
+                                                    <div class="first-product-img">
+                                                        <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
+                                                            alt="">
+                                                    </div>
+                                                    <div class="first-product-information">
+                                                        <div class="information-group">
+                                                            <div class="first-product-name">
+                                                                100% Whey Gold Standard 5Lbs (2.3kg)
+                                                            </div>
+                                                            <div class="first-product-quantity">
+                                                                Số lượng:
+                                                                <span>
+                                                                    1
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="first-product-price">
+                                                            60,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="total">
+                                                    <div class="total-products">
+                                                        <span>
+                                                            100
+                                                        </span>
+                                                        sản phẩm
+                                                    </div>
+                                                    <div class="total-price">
+                                                        <img src="../img/shop/icon/shield.png" alt="">
+                                                        Thành tiền:
+                                                        <span>
+                                                            1,650,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <button class="open">
+                                        <i class="fa-solid fa-bars"></i>
+                                    </button>
+                                    Tất cả đơn hàng
+                                </div>
+                                <div class="list-order">
+                                    <div class="list-order-wrapper">
+                                        <div class="order">
+                                            <div class="order-wrapper">
+                                                <div class="header-order">
+                                                    <div class="brand-offical">
+                                                        <div class="brand-offical-logo">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <span>
+                                                                OFFICAL
+                                                            </span>
+                                                        </div>
+                                                        <div class="brand-name">
+                                                            WHEZ
+                                                        </div>
+                                                    </div>
+                                                    <div class="status-order">
+                                                        Hoàn thành
+                                                    </div>
+                                                </div>
+                                                <div class="first-product">
+                                                    <div class="first-product-img">
+                                                        <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
+                                                            alt="">
+                                                    </div>
+                                                    <div class="first-product-information">
+                                                        <div class="information-group">
+                                                            <div class="first-product-name">
+                                                                100% Whey Gold Standard 5Lbs (2.3kg)
+                                                            </div>
+                                                            <div class="first-product-quantity">
+                                                                Số lượng:
+                                                                <span>
+                                                                    1
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="first-product-price">
+                                                            60,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="total">
+                                                    <div class="total-products">
+                                                        <span>
+                                                            100
+                                                        </span>
+                                                        sản phẩm
+                                                    </div>
+                                                    <div class="total-price">
+                                                        <img src="../img/shop/icon/shield.png" alt="">
+                                                        Thành tiền:
+                                                        <span>
+                                                            1,650,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <div class="title">
+                                    <button class="open">
+                                        <i class="fa-solid fa-bars"></i>
+                                    </button>
+                                    Tất cả đơn hàng
+                                </div>
+                                <div class="list-order">
+                                    <div class="list-order-wrapper">
+                                        <div class="order">
+                                            <div class="order-wrapper">
+                                                <div class="header-order">
+                                                    <div class="brand-offical">
+                                                        <div class="brand-offical-logo">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <span>
+                                                                OFFICAL
+                                                            </span>
+                                                        </div>
+                                                        <div class="brand-name">
+                                                            WHEZ
+                                                        </div>
+                                                    </div>
+                                                    <div class="status-order">
+                                                        Hoàn thành
+                                                    </div>
+                                                </div>
+                                                <div class="first-product">
+                                                    <div class="first-product-img">
+                                                        <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
+                                                            alt="">
+                                                    </div>
+                                                    <div class="first-product-information">
+                                                        <div class="information-group">
+                                                            <div class="first-product-name">
+                                                                100% Whey Gold Standard 5Lbs (2.3kg)
+                                                            </div>
+                                                            <div class="first-product-quantity">
+                                                                Số lượng:
+                                                                <span>
+                                                                    1
+                                                                </span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="first-product-price">
+                                                            60,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="total">
+                                                    <div class="total-products">
+                                                        <span>
+                                                            100
+                                                        </span>
+                                                        sản phẩm
+                                                    </div>
+                                                    <div class="total-price">
+                                                        <img src="../img/shop/icon/shield.png" alt="">
+                                                        Thành tiền:
+                                                        <span>
+                                                            1,650,000
+                                                            <span>
+                                                                ₫
+                                                            </span>
+                                                        </span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div>
+                                        <div class="order"></div> -->
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
