add order sucessful

--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -2874,6 +2874,14 @@
         account.onclick = function () {
             window.location.href = 'wheyshop_tracking.html'
         }
+        const buyNow = document.querySelector('.buy-now')
+        buyNow.onclick = function () {
+            window.location.href = 'wheyshop_checkout.html'
+        }
+        const buy = document.querySelector('.button-payment button')
+        buy.onclick = function () {
+            window.location.href = 'wheyshop_checkout.html'
+        }
 
         const cartButton = document.querySelector('.cart-button button');
         const cartShow = document.querySelector('.cart-show');
