add function for tracking

--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -174,7 +174,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="tab">
+                            <div class="tab-button">
                                 <button class="">
                                     <img src="../img/shop/icon/user.png" alt="">
                                     <div class="text">Tài khoản của tôi</div>
@@ -222,7 +222,8 @@
                                                 <div class="header-order">
                                                     <div class="brand-offical">
                                                         <div class="brand-offical-logo">
-                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png"
+                                                                alt="">
                                                             <span>
                                                                 OFFICAL
                                                             </span>
@@ -253,10 +254,10 @@
                                                             </div>
                                                         </div>
                                                         <div class="first-product-price">
-                                                            60,000
                                                             <span>
-                                                                ₫
+                                                                60,000
                                                             </span>
+                                                            ₫
                                                         </div>
                                                     </div>
                                                 </div>
@@ -270,22 +271,22 @@
                                                     <div class="total-price">
                                                         <img src="../img/shop/icon/shield.png" alt="">
                                                         Thành tiền:
-                                                        <span>
-                                                            1,650,000
+                                                        <div>
                                                             <span>
-                                                                ₫
+                                                                1,650,000
                                                             </span>
-                                                        </span>
+                                                            ₫
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <!-- <div class="order"></div>
                                         <div class="order"></div>
                                         <div class="order"></div>
                                         <div class="order"></div>
                                         <div class="order"></div>
-                                        <div class="order"></div> -->
+                                        <div class="order"></div>
+                                        <div class="order"></div>
                                     </div>
                                 </div>
                             </div>
@@ -303,7 +304,8 @@
                                                 <div class="header-order">
                                                     <div class="brand-offical">
                                                         <div class="brand-offical-logo">
-                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png"
+                                                                alt="">
                                                             <span>
                                                                 OFFICAL
                                                             </span>
@@ -313,7 +315,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="status-order">
-                                                        Hoàn thành
+                                                        Đã huỷ
                                                     </div>
                                                 </div>
                                                 <div class="first-product">
@@ -375,7 +377,7 @@
                                     <button class="open">
                                         <i class="fa-solid fa-bars"></i>
                                     </button>
-                                    Tất cả đơn hàng
+                                    Đang vận chuyển
                                 </div>
                                 <div class="list-order">
                                     <div class="list-order-wrapper">
@@ -384,7 +386,8 @@
                                                 <div class="header-order">
                                                     <div class="brand-offical">
                                                         <div class="brand-offical-logo">
-                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png"
+                                                                alt="">
                                                             <span>
                                                                 OFFICAL
                                                             </span>
@@ -394,7 +397,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="status-order">
-                                                        Hoàn thành
+                                                        Đang vận chuyển
                                                     </div>
                                                 </div>
                                                 <div class="first-product">
@@ -456,7 +459,7 @@
                                     <button class="open">
                                         <i class="fa-solid fa-bars"></i>
                                     </button>
-                                    Tất cả đơn hàng
+                                    Giao thành công
                                 </div>
                                 <div class="list-order">
                                     <div class="list-order-wrapper">
@@ -465,7 +468,8 @@
                                                 <div class="header-order">
                                                     <div class="brand-offical">
                                                         <div class="brand-offical-logo">
-                                                            <img class="check-icon" src="../img/shop/icon/checklist.png" alt="">
+                                                            <img class="check-icon" src="../img/shop/icon/checklist.png"
+                                                                alt="">
                                                             <span>
                                                                 OFFICAL
                                                             </span>
@@ -546,6 +550,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="../navigation_javascript/wheyshop.js"></script>
+    <script src="../navigation_javascript/wheyshop_tracking.js"></script>
     <script>
 
 
@@ -644,7 +649,7 @@
             //    }
             //    );
             //});
-            
+
         }, 1000)
 
 
