--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="header-options">
                             <div class="home">
-                                <button class="home-button active">
+                                <button class="home-button">
                                     <i class="fa-solid fa-house"></i>
                                     <span>
                                         Trang chủ
@@ -55,7 +55,7 @@
                                 </button>
                             </div>
                             <div class="account">
-                                <button class="account-button">
+                                <button class="account-button active">
                                     <i class="fa-solid fa-face-smile"></i>
                                     <span>
                                         Tài khoản
