update shop interface

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                         </a>
                     </div>
                     <div class="header-nav chat">
-                        <a href="./navigation/chatbox.html">
-                            CHAT ONLINE
+                        <a href="./navigation/wheyshop.html">
+                            SHOP WHEY
                         </a>
                     </div>
                     <div class="header-nav service">
@@ -61,8 +61,8 @@
                                 </a>
                             </div>
                             <div class="content-service">
-                                <a href="./navigation/wheyshop.html">
-                                    CỬA HÀNG WHEY
+                                <a href="./navigation/chatbox.html">
+                                    CHAT ONLINE
                                 </a>
                             </div>
                             <div class="content-service">
