--- a/public/navigation/wheyshop_checkout.html
+++ b/public/navigation/wheyshop_checkout.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="../navigation_css/wheyshop_checkout.css">
-    <title> WHEZ - mua hàng online</title>
+    <title> WHEZ - Thanh toán</title>
 </head>
 
 <body>
