--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -77,7 +77,7 @@
                                             Giỏ hàng
                                         </div>
                                         <div class="list-items">
-                                            <div class="item-in-cart">
+                                            <!-- <div class="item-in-cart">
                                                 <div class="item-img">
                                                     <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp"
                                                         alt="">
@@ -111,7 +111,7 @@
                                             <div class="item-in-cart"></div>
                                             <div class="item-in-cart"></div>
                                             <div class="item-in-cart"></div>
-                                            <div class="item-in-cart"></div>
+                                            <div class="item-in-cart"></div> -->
                                         </div>
                                         <div class="total">
                                             Tổng
