--- a/public/navigation/wheyshop_tracking.html
+++ b/public/navigation/wheyshop_tracking.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../font/fontawesome-free-6.4.0-web/css/all.min.css">
     <link rel="stylesheet" href="../navigation_css/wheyshop_tracking.css">
-    <title> WHEZ - Tra cứu đơn hàng</title>
+    <title> WHEZ - Đơn hàng của bạn</title>
 </head>
 
 <body>
@@ -336,10 +336,10 @@
                                                             </div>
                                                         </div>
                                                         <div class="first-product-price">
-                                                            60,000
                                                             <span>
-                                                                ₫
+                                                                60,000
                                                             </span>
+                                                            ₫
                                                         </div>
                                                     </div>
                                                 </div>
@@ -353,12 +353,12 @@
                                                     <div class="total-price">
                                                         <img src="../img/shop/icon/shield.png" alt="">
                                                         Thành tiền:
-                                                        <span>
-                                                            1,650,000
+                                                        <div>
                                                             <span>
-                                                                ₫
+                                                                1,650,000
                                                             </span>
-                                                        </span>
+                                                            ₫
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -418,10 +418,10 @@
                                                             </div>
                                                         </div>
                                                         <div class="first-product-price">
-                                                            60,000
                                                             <span>
-                                                                ₫
+                                                                60,000
                                                             </span>
+                                                            ₫
                                                         </div>
                                                     </div>
                                                 </div>
@@ -435,12 +435,12 @@
                                                     <div class="total-price">
                                                         <img src="../img/shop/icon/shield.png" alt="">
                                                         Thành tiền:
-                                                        <span>
-                                                            1,650,000
+                                                        <div>
                                                             <span>
-                                                                ₫
+                                                                1,650,000
                                                             </span>
-                                                        </span>
+                                                            ₫
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -500,10 +500,10 @@
                                                             </div>
                                                         </div>
                                                         <div class="first-product-price">
-                                                            60,000
                                                             <span>
-                                                                ₫
+                                                                60,000
                                                             </span>
+                                                            ₫
                                                         </div>
                                                     </div>
                                                 </div>
@@ -517,12 +517,12 @@
                                                     <div class="total-price">
                                                         <img src="../img/shop/icon/shield.png" alt="">
                                                         Thành tiền:
-                                                        <span>
-                                                            1,650,000
+                                                        <div>
                                                             <span>
-                                                                ₫
+                                                                1,650,000
                                                             </span>
-                                                        </span>
+                                                            ₫
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
