--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -2875,9 +2875,9 @@
             window.location.href = 'wheyshop_tracking.html'
         }
         const buyNow = document.querySelector('.buy-now')
-        buyNow.onclick = function () {
-            window.location.href = 'wheyshop_checkout.html'
-        }
+        //buyNow.onclick = function () {
+        //    window.location.href = 'wheyshop_checkout.html'
+        //}
         const buy = document.querySelector('.button-payment button')
         buy.onclick = function () {
             window.location.href = 'wheyshop_checkout.html'
