--- a/public/navigation/wheyshop_checkout.html
+++ b/public/navigation/wheyshop_checkout.html
@@ -110,7 +110,7 @@
                             </div>
                             <div class="list-items">
                                 <div class="list-items-wrapper">
-                                    <div class="item">
+                                    <!-- <div class="item">
                                         <div class="item-img">
                                             <img src="../img/shop/whey/100-whey-gold-standard-5lbs-2-3kg-13-2x.webp" alt="">
                                         </div>
@@ -158,7 +158,7 @@
                                                 </span>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- <div class="item"></div>
                                     <div class="item"></div>
                                     <div class="item"></div>
@@ -172,12 +172,12 @@
                                     </div>
                                     <div class="total-price-product total-style">
                                         Tiền sản phẩm
-                                        <span>
-                                            1,650,000
+                                        <div>
                                             <span>
-                                                ₫
+                                                1,650,000
                                             </span>
-                                        </span>
+                                            ₫
+                                        </div>
                                     </div>
                                     <div class="total-quantity-product total-style">
                                         Số lượng sản phẩm
@@ -187,30 +187,30 @@
                                     </div>
                                     <div class="total-price-ship total-style">
                                         Phí ship
-                                        <span>
-                                            0
+                                        <div>
                                             <span>
-                                                ₫
+                                                1,650,000
                                             </span>
-                                        </span>
+                                            ₫
+                                        </div>
                                     </div>
                                     <div class="total-price-vat total-style">
                                         VAT
-                                        <span>
-                                            0
+                                        <div>
                                             <span>
-                                                ₫
+                                                1,650,000
                                             </span>
-                                        </span>
+                                            ₫
+                                        </div>
                                     </div>
                                     <div class="final-total-price total-style">
                                         Tổng cộng
-                                        <span>
-                                            1,650,000
+                                        <div>
                                             <span>
-                                                ₫
+                                                <!-- 1,650,000 -->
                                             </span>
-                                        </span>
+                                            ₫
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -224,7 +224,7 @@
                             <div class="options-information">
                                 <!-- Địa chỉ mặc định gồm những thông tin đã có sẵn có khách hàng, nếu muốn thay đổi giao đến người khác hãy chọn địa chỉ mới ! -->
                                 <div>
-                                    <input id="default" type="checkbox">
+                                    <input id="default" type="radio" name="address">
                                     <label for="default">
                                         Địa chỉ mặc định
                                         <button>
@@ -239,7 +239,7 @@
                                     </label>
                                 </div>
                                 <div>
-                                    <input id="new" type="checkbox">
+                                    <input id="new" type="radio" name="address">
                                     <label for="new">Địa chỉ mới</label>
                                 </div>
                             </div>
@@ -291,7 +291,8 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="../navigation_javascript/wheyshop.js"></script>
+    <!-- <script src="../navigation_javascript/wheyshop.js"></script> -->
+    <script src="../navigation_javascript/wheyshop_checkout.js"></script>
     <script>
 
 
