update shop interface

--- a/public/navigation/wheyshop.html
+++ b/public/navigation/wheyshop.html
@@ -292,12 +292,16 @@
                                             <div class="choose-options">
                                                 <div class="option one">
                                                     <button class="buy-now">
-                                                        Mua ngay
+                                                        <span>
+                                                            Mua ngay
+                                                        </span>
                                                     </button>
                                                 </div>
                                                 <div class="option two">
                                                     <button class="add-cart">
-                                                        Thêm vào giỏ hàng
+                                                        <span>
+                                                            Thêm vào giỏ hàng
+                                                        </span>
                                                     </button>
                                                 </div>
                                             </div>
